--- a/index.html
+++ b/index.html
@@ -535,11 +535,11 @@
         <div class="box_icon">
             <div class="box_icon">
                 <ul>
-                    <li><a href="https://chentha.github.io/chenthakh/"><i class="fa fa-house"></i></a></li>
-                    <li><a href="/about/index1.html"><i class="fa fa-user"></i></a></li>
-                    <li><a href=""><i class="fa fa-briefcase"></i></a></li>
-                    <li><a href="/index3.html"><i class="fa fa-envelope-open"></i></a></li>
-                    <li><a href=""><i class="fa fa-comments"></i></a></li>
+                    <li><a href="https://chentha.github.io/Home/"><i class="fa fa-house"></i></a></li>
+                    <li><a href="https://chentha.github.io/about/"><i class="fa fa-user"></i></a></li>
+                    <li><a href="https://chentha.github.io/Portfolio/"><i class="fa fa-briefcase"></i></a></li>
+                    <li><a href="https://chentha.github.io/Contact/"><i class="fa fa-envelope-open"></i></a></li>
+                    <li><a href="https://chentha.github.io/Blog/"><i class="fa fa-comments"></i></a></li>
                 </ul>
             </div>
         </div>
